# qt-modular-plugin-framework

./: .gitignore  CMakeUserPresets.json.example  CONTRIBUTING.md  DEVELOPMENT.md  QUICKSTART.md  README.md
foundation-sdk/: CMakeLists.txt  README.md
foundation-sdk/cmake/: MPFConfig.cmake.in
foundation-sdk/include/mpf/: logger.h  mpf.h  plugin_metadata.h  service_registry.h
foundation-sdk/include/mpf/interfaces/: ieventbus.h  ilogger.h  imenu.h  inavigation.h  iplugin.h  isettings.h  itheme.h
foundation-sdk/src/: logger.cpp  plugin_metadata.cpp  service_registry.cpp
host/: CMakeLists.txt  README.md
host/cmake/: sdk_paths.h.in  version.h.in
host/config/: paths.json  paths.json.example
host/include/: application.h  event_bus_service.h  logger.h  menu_service.h  navigation_service.h  plugin_loader.h  plugin_manager.h  plugin_metadata.h  qml_context.h  service_registry.h  settings_service.h  theme_service.h
host/qml/: ErrorDialog.qml  Main.qml  MenuItemCustom.qml  SideMenu.qml
host/src/: application.cpp  event_bus_service.cpp  logger.cpp  main.cpp  menu_service.cpp  navigation_service.cpp  plugin_loader.cpp  plugin_manager.cpp  plugin_metadata.cpp  qml_context.cpp  service_registry.cpp  settings_service.cpp  theme_service.cpp
host/tests/: CMakeLists.txt  test_event_bus.cpp
libs/http-client/: CMakeLists.txt  README.md
libs/http-client/cmake/: MPFHttpClientConfig.cmake.in
libs/http-client/include/mpf/http/: http_client.h
libs/http-client/src/: http_client.cpp
libs/ui-components/: CMakeLists.txt  README.md
libs/ui-components/cmake/: MPFUIComponentsConfig.cmake.in
libs/ui-components/qml/: MPFButton.qml  MPFCard.qml  MPFDialog.qml  MPFIconButton.qml  MPFLoadingIndicator.qml  MPFTextField.qml  StatusBadge.qml
libs/ui-components/src/: color_helper.cpp  color_helper.h  input_validator.cpp  input_validator.h  ui_components_global.h
plugins/: README.md
plugins/orders/: CMakeLists.txt  CMakePresets.json  README.md  orders_plugin.json
plugins/orders/include/: order_model.h  orders_plugin.h  orders_service.h
plugins/orders/qml/: CreateOrderDialog.qml  OrderCard.qml  OrderDetailPage.qml  OrdersPage.qml
plugins/orders/src/: order_model.cpp  orders_plugin.cpp  orders_service.cpp
plugins/rules/: CMakeLists.txt  rules_plugin.json  ui.qrc
plugins/rules/include/: order_model.h  rules_plugin.h
plugins/rules/qml/: OrderCard.qml  OrdersPage.qml  TestCard.qml
plugins/rules/src/: order_model.cpp  rules_plugin.cpp
scripts/: build-all.ps1  build-all.sh  install-sdk.ps1  package-http-client.ps1  package-libs.ps1  package-ui-components.ps1  setup-env.ps1  setup-env.sh  sync-runtime-dlls.ps1
